improved ui font

--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Questrial');
-// colors
 @colorset-main: #5CB85C;
 @colorset-main0: darken(saturate(@colorset-main, 100%), 10%);
 @colorset-main1: darken(@colorset-main0, 15%);
@@ -25,7 +23,7 @@
 
 @site-width: 1920px;
 
-@font: 'Questrial', 'sans-serif';
+@font: 'Segoe UI', 'sans-serif';
 
 @content-padding: 10px;
 // body
