--- a/src/views/home/home.less
+++ b/src/views/home/home.less
@@ -4,3 +4,14 @@
   color: @colorset-main0;
   font-size: 1.6em;
 }
+
+.btn-list {
+  display: flex;
+  & > * {
+    margin: auto;
+  }
+}
+
+.home-text {
+  font-size: 1.25em;
+}
