--- a/src/views/pending-articles/pending-articles.html
+++ b/src/views/pending-articles/pending-articles.html
@@ -1,3 +1,8 @@
 <template>
-  <h1>TOTOTOT</h1>
+  <div class="container">
+    <div class="category-title">
+      <compose view-model="../breadcrumb/breadcrumb"></compose>
+    </div>
+    <h2>test</h2>
+  </div>
 </template>
