--- a/src/app.less
+++ b/src/app.less
@@ -4,3 +4,4 @@
 @import "./styles/btn.less";
 @import "./styles/toastr.less";
 @import "./styles/breadcrumb.less";
+@import "./styles/dropdown.less";
