--- a/src/styles/view.less
+++ b/src/styles/view.less
@@ -16,3 +16,17 @@
     padding-bottom: .75rem;
     margin-bottom: 1rem;
 }
+
+.row {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
+}
+
+.flex-center-parent {
+  margin: auto;
+}
+
+.flex-align-center {
+  align-self: center;
+}
