--- a/src/views/header/header.less
+++ b/src/views/header/header.less
@@ -8,25 +8,18 @@
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
-  padding: 0 2rem 0 0;
+  padding: 0 4rem;
 }
 
 .logo {
-  order: 1;
   padding: 15px;
-  align-self: center;
-}
-
-.menu-items {
-  order: 3;
-  align-self: center;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-evenly;
 }
 
 .connect-btn, .disconnect-btn {
+  color: @colorset-light0;
   font-size: 16px;
   cursor: pointer;
   text-decoration: none;
+  height: 100%;
+  margin: auto;
 }
