added settings view

--- a/src/app.less
+++ b/src/app.less
@@ -5,3 +5,4 @@
 @import "./styles/toastr.less";
 @import "./styles/breadcrumb.less";
 @import "./styles/dropdown.less";
+@import "./styles/input.less";
