--- a/src/views/breadcrumb/breadcrumb.html
+++ b/src/views/breadcrumb/breadcrumb.html
@@ -1,6 +1,6 @@
 <template>
   <ul class="breadcrumb">
-    <li repeat.for="nav of router.navigation">
+    <li repeat.for="nav of routes">
       <a href.bind="nav.href">${`breadcrumb.${nav.config.name}` & t}</a>
     </li>
   </ul>
