--- a/src/views/breadcrumb/breadcrumb.less
+++ b/src/views/breadcrumb/breadcrumb.less
@@ -1,4 +1,4 @@
-@import './theme.less';
+@import './../../styles/theme.less';
 
 .breadcrumb {
   white-space: nowrap;
@@ -38,6 +38,9 @@
       letter-spacing: -1px;
       text-decoration: none;
       color: @colorset-dark2;
+    }
+    & .active {
+      color: @colorset-dark1;
     }
   }
 }
