--- a/src/views/pending-articles/pending-articles.html
+++ b/src/views/pending-articles/pending-articles.html
@@ -3,6 +3,21 @@
     <div class="category-title">
       <compose view-model="../breadcrumb/breadcrumb"></compose>
     </div>
-    <h2>test</h2>
+    <span if.bind="!articles">${'articles.loading' & t}</span>
+    <span if.bind="articles && articles.length === 0">${'articles.noarticle' & t}</span>
+    <table class="table" if.bind="articles && articles.length > 0">
+      <thead>
+        <tr>
+          <th>${'articles.name' & t}</th>
+          <th>${'articles.actions' & t}</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr repeat.for="article of articles">
+          <td>${article.name}</td>
+          <td><button class="btn btn-primary">${'articles.edit' & t}</button></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </template>
