--- a/src/views/pending-articles/pending-articles.html
+++ b/src/views/pending-articles/pending-articles.html
@@ -3,19 +3,28 @@
     <div class="category-title">
       <compose view-model="../breadcrumb/breadcrumb"></compose>
     </div>
+    <button class="btn btn-primary">+ Create Category</button>
     <span if.bind="!articles">${'articles.loading' & t}</span>
     <span if.bind="articles && articles.length === 0">${'articles.noarticle' & t}</span>
     <table class="table" if.bind="articles && articles.length > 0">
       <thead>
         <tr>
-          <th>${'articles.name' & t}</th>
-          <th>${'articles.actions' & t}</th>
+          <th>${'articles.brands' & t}</th>
+          <th>${'articles.productName' & t}</th>
+          <th>${'articles.labels' & t}</th>
+          <th>${'articles.categories' & t}</th>
+          <th>${'articles.validate' & t}</th>
+          <th>${'articles.reject' & t}</th>
         </tr>
       </thead>
       <tbody>
         <tr repeat.for="article of articles">
-          <td>${article.name}</td>
-          <td><button class="btn btn-primary">${'articles.edit' & t}</button></td>
+          <td>${article.brands || 'n/a'}</td>
+          <td>${article.product_name || 'n/a'}</td>
+          <td>${article.labels || 'n/a'}</td>
+          <td>TBD</td>
+          <td><button class="btn btn-primary">${'articles.validate' & t}</button></td>
+          <td><button class="btn btn-primary">${'articles.reject' & t}</button></td>
         </tr>
       </tbody>
     </table>
