--- a/src/styles/table.less
+++ b/src/styles/table.less
@@ -12,7 +12,7 @@ table {
 .table th,
 .table td {
   padding: 0.75rem;
-  vertical-align: top;
+  vertical-align: middle;
   border-top: 1px solid #dee2e6;
 }
 
