--- a/src/views/create-category/create-category.html
+++ b/src/views/create-category/create-category.html
@@ -27,7 +27,7 @@
       </label>
     </div>
     <div class="row">
-      <button class.bind="controller.errors.length ? 'btn btn-disabled flex-center-parent' : 'btn btn-primary flex-center-parent'" click.trigger="save()">${'category.save' & t}</button>
+      <button class="btn btn-primary flex-center-parent" disabled.bind="!canSave" click.trigger="save()">${'category.save' & t}</button>
     </div>
   </div>
 </template>
