began implementinh arrow list

--- a/src/styles/btn.less
+++ b/src/styles/btn.less
@@ -35,6 +35,19 @@
   }
 }
 
+.btn-outline-primary {
+  color: @colorset-blue;
+  background-color: transparent;
+  border-color: @colorset-blue;
+  &:hover,
+  &:focus,
+  &:active {
+    color: @colorset-light0;
+    background-color: @colorset-blue;
+    border-color: @colorset-blue;
+  }
+}
+
 .btn-primary {
   color: @colorset-light0;
   background-color: @colorset-blue;
