--- a/src/styles/list.less
+++ b/src/styles/list.less
@@ -6,6 +6,7 @@
   width: 100%;
   border: 1px solid @colorset-blue;
   background-color: @colorset-light0;
+  min-height: 10rem;
   & > li {
     list-style: none;
     text-align: center;
