--- a/src/views/gathering/gathering.html
+++ b/src/views/gathering/gathering.html
@@ -4,4 +4,8 @@
       <compose view-model="../breadcrumb/breadcrumb"></compose>
     </div>
   </div>
+  <div class="row">
+    <button class="btn btn-primary flex-center-parent">${'gathering.createGathering' & t}</button>
+  </div>
+  <arrow-list source.bind="articles"></arrow-list>
 </template>
