finished implementing arrow list

--- a/src/views/gathering/gathering.html
+++ b/src/views/gathering/gathering.html
@@ -7,5 +7,5 @@
   <div class="row">
     <button class="btn btn-primary flex-center-parent">${'gathering.createGathering' & t}</button>
   </div>
-  <arrow-list source.bind="articles"></arrow-list>
+  <arrow-list source.bind="articleNames"></arrow-list>
 </template>
