--- a/src/views/create-gathering/create-gathering.html
+++ b/src/views/create-gathering/create-gathering.html
@@ -1,33 +1,32 @@
 <template>
   <div class="container">
-    <h1 class="category-title">${'category.title' & t}</h1>
+    <h1 class="category-title">${'create-gathering.title' & t}</h1>
     <form class="grid-row">
-      <label class="col-start-3 col-end-6" validation-errors.bind="categoryErrors">${'category.name' & t}
-        <input class.bind="categoryErrors.length ? 'input input-danger' : 'input'" value.bind="category & validate">
-        <ul if.bind="categoryErrors" class="form-error">
-          <li repeat.for="error of categoryErrors">
+      <label class="col-start-3 col-end-6" validation-errors.bind="nameErrors">${'create-gathering.name' & t}
+        <input class.bind="nameErrors.length ? 'input input-danger' : 'input'" value.bind="name & validate">
+        <ul if.bind="nameErrors" class="form-error">
+          <li repeat.for="error of nameErrors">
             ${error.error.message}
           </li>
         </ul>
       </label>
-      <label class="col-start-8 col-end-11" validation-errors.bind="stockErrors">${'category.maxAmount' & t}
-        <input class.bind="stockErrors.length ? 'input input-danger' : 'input'" value.bind="stock & validate">
-        <ul if.bind="stockErrors" class="form-error">
-          <li repeat.for="error of stockErrors">
+      <label class="col-start-8 col-end-11" validation-errors.bind="transportErrors">
+        ${'create-gathering.transporter' & t}
+        <select class.bind="transportErrors.length ? 'input input-danger' : 'input'" value.bind="transporter & validate">
+          <option repeat.for="t of transporters" model.bind="t.id">
+            ${t.name} ${t.lastname}
+          </option>
+        </select>
+        <ul if.bind="transportErrors" class="form-error">
+          <li repeat.for="error of transportErrors">
             ${error.error.message}
           </li>
         </ul>
       </label>
     </form>
-    <div class="grid-row" if.bind="similarCategories.length > 0">
-      <label class="col-start-5 col-end-9">similar existing categories
-        <ul class="list">
-          <li repeat.for="c of similarCategories | take:10">${c.type_article}</li>
-        </ul>
-      </label>
-    </div>
     <div class="row">
-      <button class="btn btn-primary flex-center-parent" disabled.bind="!canSave" click.trigger="save()">${'category.save' & t}</button>
+      <button class="btn btn-primary flex-center-parent" disabled.bind="!canSave"
+        click.trigger="save()">${'create-gathering.save' & t}</button>
     </div>
   </div>
 </template>
