--- a/src/views/gathering/gathering.html
+++ b/src/views/gathering/gathering.html
@@ -26,7 +26,7 @@
     <arrow-list source.bind="articles" destination.bind="validatedArticles"
       source-name.bind="_i18n.tr('gathering.available')" destination-name.bind="_i18n.tr('gathering.affected')">
       <template replace-part="items">
-        <span>${item.product_name}</span>
+        <span>${item.product_name} - ${item.name} ${item.lastname}</span>
       </template>
     </arrow-list>
     <div class="row">
