added cancel button in create views

--- a/src/views/create-category/create-category.html
+++ b/src/views/create-category/create-category.html
@@ -27,7 +27,8 @@
       </label>
     </div>
     <div class="row">
-      <button class="btn btn-primary flex-center-parent" disabled.bind="!canSave" click.trigger="save()">${'category.save' & t}</button>
+      <button class="btn btn-primary" click.trigger="cancel()">${'category.cancel' & t}</button>
+      <button class="btn btn-primary" disabled.bind="!canSave" click.trigger="save()">${'category.save' & t}</button>
     </div>
   </div>
 </template>
