added custome home routing

--- a/src/styles/btn.less
+++ b/src/styles/btn.less
@@ -1,7 +1,7 @@
 @import './theme.less';
 
 .btn {
-  cursor: pointer;
+  cursor: pointer !important;
   display: inline-block;
   font-weight: 400;
   color: transparent;
