finished last view in spa

--- a/src/views/article/article.html
+++ b/src/views/article/article.html
@@ -9,7 +9,7 @@
         <li>${'articles.labels' & t}: ${article.labels}</li>
         <li>${'articles.ingredients' & t}: ${article.ingredients_text}</li>
         <li>${'articles.categories' & t}: ${article.type_article}</li>
-        <button class="btn btn-primary back" click.trigger="backToArticles()">Back</button>
+        <button class="btn btn-primary back" click.trigger="backToArticles()">${'articles.back' & t}</button>
       </ul>
     </div>
   </div>
